--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "axios": "^0.21.1",
     "babel-cli": "^6.26.0",
     "bootstrap": "^4.6.0",
+    "i18next": "^19.8.7",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sass": "^1.32.5",
