--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nissa-shulter-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": " https://nissaanimalshelter.herokuapp.com/",
+  "homepage": " https://brain00021.github.io/nissaShulter/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.6",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sass": "^1.32.5",
